add maven parallel test mechanism